--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "star-bd",
+  "name": "react-star-db",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://bodrus.github.io//react-star-db/",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -11,8 +13,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
     "test": "react-scripts test",
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "browserslist": {
