--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-star-db",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://bodrus.github.io//react-star-db/",
+  "homepage": "https://bodrus.github.io/react-star-db/",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "prop-types": "^15.7.2",
